--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -80,6 +80,8 @@ if ($gridTeaser) {
         $teaserBrickClass .= ' ' . $brickClass . '--y2';
     }
 }
+
+$openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
 ?>
 
 <?= $block->getCssOnce('css/image-teaser.css'); ?>
@@ -168,6 +170,7 @@ if ($gridTeaser) {
                                     ->setIsSlider($isSlider)
                                     ->setIsSliderMobile($isSliderMobile)
                                     ->setContentPlacement($contentPlacement)
+                                    ->setOpenLinkInNewTab($openLinkInNewTab)
                                     ->toHtml();
                                 ?>
                             <?php endforeach; ?>
