--- a/view/frontend/templates/component/instagram_feed.phtml
+++ b/view/frontend/templates/component/instagram_feed.phtml
@@ -14,6 +14,7 @@ if(!empty($data['items'])) {
        ->setData($data)
        ->setMix('cs-image-teaser--instagram-feed ' . $block->getMix())
        ->setContainerMix('cs-container--instagram-feed ' . $block->getContainerMix())
+       ->setOpenLinkInNewTab(true)
        ->toHtml();
 }
 ?>
